--- a/src/Components/Home/Content/Header/Header.css
+++ b/src/Components/Home/Content/Header/Header.css
@@ -70,10 +70,10 @@
 }
 .header__list{
     position: absolute;
-    background: #FFFFFF;
+    background: #FAFAEB;
     top: calc(100% + 8px);
-    width: calc(100% + 180px);
-    left: -90px;
+    width: 440px;
+    left: 10px;
     z-index: 5;
     padding: 10px 8px;
     flex-direction: column;
@@ -85,32 +85,41 @@
 .header__list-info{
     display: flex;
     align-items: center;
+    width: 100%;
+    padding-bottom: 10px;
+    border-bottom: 1px solid black;
 }
 .header__list-item{
     display: flex;
-    column-gap: 20px;
+    column-gap: 5px;
     align-items: center;
 }
 .header__list-img{
-    width: 52px;
-    height: 52px;
+    min-width: 52px;
+    height: 82px;
+    margin-right: 15px;
     border-radius: 30%;
-    cursor: pointer;
 }
 .header__list-title{
     font-family: DIN Pro,sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 20px;
+    font-size: 14px;
     line-height: 22px;
     color: #111111;
-    margin-bottom: 5px;
+    transition: .3s;
+}
+.header__list-title:hover{
+    text-decoration-line: underline;
+    color: #2BA84A;
+    cursor: pointer;
+    transition: .3s;
 }
 .header__list-price{
     font-family: DIN Pro,sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 14px;
     line-height: 30px;
     color: #000000;
 }
