--- a/src/Components/Home/Content/Header/Header.css
+++ b/src/Components/Home/Content/Header/Header.css
@@ -36,7 +36,7 @@
     width: 242px;
     height: 40px;
     padding: 0 33px 0 15px;
-    margin-left: 105px;
+    margin-left: 205px;
     border: 1px solid #2D3A3A;
     box-sizing: border-box;
     border-radius: 30px;
@@ -70,12 +70,11 @@
 }
 .header__list{
     position: absolute;
-    background: #FAFAEB;
+    background: #F8F8F8;
     top: calc(100% + 8px);
     width: 440px;
     left: 10px;
     z-index: 5;
-    padding: 10px 8px;
     flex-direction: column;
     row-gap: 20px;
     max-height: 380px;
@@ -87,11 +86,12 @@
     align-items: center;
     width: 100%;
     padding-bottom: 10px;
-    border-bottom: 1px solid black;
+    border-bottom: 0.5px solid black;
 }
 .header__list-item{
     display: flex;
     column-gap: 5px;
+    margin: 5px 8px;
     align-items: center;
 }
 .header__list-img{
@@ -104,7 +104,7 @@
     font-family: DIN Pro,sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 22px;
     color: #111111;
     transition: .3s;
@@ -272,20 +272,6 @@
     display: flex;
     column-gap: 50px;
 }
-.header__bottom-catalog{
-    font-family: Open Sans,sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 22px;
-    color: #ffffff;
-    cursor: pointer;
-    transition: .3s;
-}
-.header__bottom-catalog:hover{
-    color: #2BA84A;
-    transition: .3s;
-}
 .header__bottom-title{
     font-family: Open Sans,sans-serif;
     font-style: normal;
@@ -309,15 +295,21 @@
     cursor: pointer;
 }
 .header__basket-text{
-    margin-left: 16px;
+    margin-left: 10px;
     font-family: Open Sans,sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
     line-height: 22px;
     color: #FFFFFF;
+    transition: .3s;
+}
+.header__basket-text:hover{
+    color: #2BA84A;
+    transition: .3s;
 }
 .header__basket-money{
+    margin-left: 10px;
     font-family: PT Sans,sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -325,21 +317,67 @@
     line-height: 21px;
     color: #2BA84A;
 }
-.header__middle-form{
-    position: absolute;
-    width: 400px;
-    height: 200px;
-    top: -12000%;
-    border-radius: 0 40px;
-    background: #000;
-}
-.header__middle-form.active{
-    z-index: 10;
-    top: 20%;
+.header__overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
     width: 100%;
-    height: 100%;
     background: #00000080;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+.header__middle-form{
+    padding: 30px;
+    width: 505px;
+    height: 587px;
+    background: #FFFFFF;
+    border-radius: 0 40px;
+}
+.header__overlay.active{
+    display: flex;
+    z-index: 15;
 }
 .lock{
     overflow: hidden;
+}
+.form__error{
+    height: 100px;
+    width: 300px;
+    color: red;
+}
+.header__overlay-list{
+    padding: 30px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'Oswald',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    color: #FFFFFF;
+    transform: translate(-6%,-34%);
+    width: 506px;
+    height: 90px;
+    background: #2BA84A;
+    border-radius: 0 40px 0 0;
+}
+.header__overlay-delete{
+    cursor: pointer;
+}
+.header__form-input{
+    width: 445px;
+    height: 60px;
+    border: 1px solid #7D7D7D;
+    margin-top: 13px;
+    padding: 0 10px;
+    font-family: 'Open Sans',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #333333;
 }
