--- a/src/Components/Home/Content/Routes/Lawns/Component/Perennial/Perennial.css
+++ b/src/Components/Home/Content/Routes/Lawns/Component/Perennial/Perennial.css
@@ -180,7 +180,7 @@
     height: 156px;
     border-radius: 30px 0;
     background-image: url("../../../../../../../Assets/Perennial/канареечник.jpg");
-    transition: .3s;
+    transition: .3s
 }
 .perennial__item12:hover{
     box-shadow: 0 4px 30px rgba(111, 111, 111, 0.85);
