--- a/src/Components/Home/Content/Routes/Lawns/Product/Product.css
+++ b/src/Components/Home/Content/Routes/Lawns/Product/Product.css
@@ -105,3 +105,14 @@
     display: flex;
     column-gap: 90px;
 }
+.product__summa{
+    font-family: 'Open Sans',sans-serif;
+    font-style: normal;
+    text-align: center;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 26px;
+    margin-left: 50px;
+    margin-bottom: 47px;
+    color: #FF5F01;
+}
