--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
+    user-select: none;
 }
 .container{
     max-width: 1650px;
@@ -22,7 +23,7 @@
         width: 630px!important;
     }
     .second-screen__row{
-        margin-left: 50px!important;
+        margin-left: 130px!important;
     }
     .fourth-screen__img-man{
         margin-top: 30px!important;
@@ -37,10 +38,23 @@
         flex-wrap: wrap!important;
     }
     .first-screen__img-lawn{
-        width: 790px!important;
+        width: 600px!important;
+        top: 155px!important;
     }
     .footer__row{
         column-gap: 80px!important;
+    }
+    .first-screen__img-bag{
+        height: 330px!important;
+        top: 115px!important;
+    }
+    .second-screen-title{
+        font-size: 23px!important;
+    }
+    .third-screen__info{
+        white-space: normal!important;
+        column-gap: 0!important;
+        width: 220px!important;
     }
 }
 @media (min-width: 767px) and (max-width: 991px){
@@ -58,17 +72,71 @@
         font-weight: 100!important;
     }
     .header__bottom-text{
-    align-items: center!important;
-    column-gap: 20px!important;
-    white-space: nowrap!important;
-}
+        align-items: center!important;
+        column-gap: 20px!important;
+        white-space: nowrap!important;
+    }
     .header__basket{
         white-space: nowrap!important;
     }
     .header__bottom-title{
         margin-right: 6px!important;
     }
+    .third-screen__top-item{
+        column-gap: 0!important;
+        width: 480px!important;
+    }
+    .fourth-screen__info-subtitle{
+        font-size: 14px!important;
+    }
+    .fifth-screen__info-title{
+        font-size: 36px!important;
+    }
+    .fifth-screen__info-list{
+        font-size: 14px!important;
+        line-height: 19px!important;
+    }
+    .fifth-screen__info-text{
+        font-size: 14px!important;
+    }
+    .first-screen__img-lawn{
+        width: 550px!important;
+    }
+    .footer__row{
+        column-gap: 20px!important;
+    }
+    .sixth-screen__row{
+        column-gap: 100px!important;
+    }
 }
-@media (min-width: 481px) and (max-width: 767px){}
+@media (min-width: 481px) and (max-width: 767px){
+    .header__top-input{
+        width: 118px!important;
+    }
+    .header__bottom-title{
+        font-size: 10px!important;
+    }
+    .header__basket-text{
+        font-size: 11px!important;
+    }
+    .first-screen__info-subtitle{
+        font-size: 10px!important;
+    }
+    .first-screen__info-title{
+        font-size: 18px!important;
+    }
+    .header__middle-text{
+        font-size: 15px!important;
+    }
+    .header__middle{
+        column-gap: 5px!important;
+    }
+    .header__middle-data{
+        font-size: 13px!important;
+    }
+    .header__middle-subtext{
+        font-size: 12px!important;
+    }
+}
 @media (min-width: 321px) and (max-width: 480px){}
 @media (max-width: 321px){}
