--- a/src/Components/Home/Content/Header/Header.css
+++ b/src/Components/Home/Content/Header/Header.css
@@ -118,7 +118,7 @@
 .header__list-price{
     font-family: DIN Pro,sans-serif;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 14px;
     line-height: 30px;
     color: #000000;
