--- a/src/Components/Home/Content/Routes/Lawns/Component/Basket/Basket.css
+++ b/src/Components/Home/Content/Routes/Lawns/Component/Basket/Basket.css
@@ -88,7 +88,7 @@
     line-height: 25px;
     color: #333333;
 }
-.basket__info-minus .basket__info-plus:hover{
+.basket__info-minus:hover{
     color: #2BA84A;
     cursor: pointer;
 }
@@ -100,6 +100,10 @@
     font-size: 22px;
     line-height: 25px;
     color: #333333;
+}
+.basket__info-plus:hover{
+    color: #2BA84A;
+    cursor: pointer;
 }
 .basket__info-one{
     font-family: 'Open Sans',sans-serif;
