--- a/src/Components/Home/Content/Routes/Routes.css
+++ b/src/Components/Home/Content/Routes/Routes.css
@@ -196,6 +196,9 @@
     display: flex;
     align-items: center;
 }
+.route__form-left{
+    width: 50%;
+}
 .route__form-input{
     width: 612px;
     height: 40px;
