--- a/src/Components/Home/Content/Routes/Main/First-screen/FirstScreen.css
+++ b/src/Components/Home/Content/Routes/Main/First-screen/FirstScreen.css
@@ -9,7 +9,7 @@
 }
 .first-screen__info{
     width: 652px;
-    height: 462px;
+    padding: 40px 0;
     background: #FFFFFF;
     border-radius: 200px 0;
     z-index: 1;
@@ -40,8 +40,7 @@
     margin: 0 63px 0 68px;
 }
 .first-screen__add-btn{
-    width: 225px;
-    height: 52px;
+    padding: 20px;
     background: #FF5F01;
     border-radius: 20px 0;
     border: none;
